--- a/Tatexkz/templates/base.html
+++ b/Tatexkz/templates/base.html
@@ -25,34 +25,37 @@
         <header class="header" data-scroll-show data-scroll="1">
             <div class="header__container">
                 <div data-da=".menu__block-1, 767.98" class="header__links links-header">
-                    <a href="{% if LANGUAGE_CODE != 'ru' %}/{{ LANGUAGE_CODE }}{% endif %}#about-us" class="links-header__link" data-goto=".about-us">{% trans 'О компании' %}</a>
-                    <a href="{% if LANGUAGE_CODE != 'ru' %}/{{ LANGUAGE_CODE }}{% endif %}#questions" class="links-header__link" data-goto=".questions">{% trans 'Частые вопросы' %}</a>
-                    <a href="{% if LANGUAGE_CODE != 'ru' %}/{{ LANGUAGE_CODE }}{% endif %}/coop" class="links-header__link">{% trans 'Сотрудничество' %}</a>
+                    <a href="{% if LANGUAGE_CODE != 'ru' %}/{{ LANGUAGE_CODE }}{% endif %}#about-us"
+                        class="links-header__link" data-goto=".about-us">{% trans 'О компании' %}</a>
+                    <a href="{% if LANGUAGE_CODE != 'ru' %}/{{ LANGUAGE_CODE }}{% endif %}#questions"
+                        class="links-header__link" data-goto=".questions">{% trans 'Частые вопросы' %}</a>
+                    <a href="{% if LANGUAGE_CODE != 'ru' %}/{{ LANGUAGE_CODE }}{% endif %}/coop"
+                        class="links-header__link">{% trans 'Сотрудничество' %}</a>
                 </div>
-                
+
                 <div data-da=".menu__block-0, 767.98" class="header__right-side">
-                    
+
                     <a href="tel:{{settings.tel_href}}" class="header__number">
                         <span class="_icon-tel"></span>
                         <span>+7 (705) 777-46-00</span>
                     </a>
                     <a target="_blank" href="https://www.instagram.com/tatex.kz/"
-                        class="header__number _icon-instagram"> <span>{% trans 'Наш Инстаграм' %}</span></a>
+                        class="header__number _icon-instagram"> </a>
                     <a target="_blank" href="https://t.me/tatexkz" class="header__number _icon-telegram">
-                        <span>{% trans 'Наш Телеграм' %}</span></a>
+                    </a>
                     <a target="_blank"
                         href="https://api.whatsapp.com/send?phone={{settings.tel_href}}&text=%D0%94%D0%BE%D0%B1%D1%80%D1%8B%D0%B9%20%D0%B4%D0%B5%D0%BD%D1%8C%2C%20%D1%8F%20%D1%81%20%D1%81%D0%B0%D0%B9%D1%82%D0%B0%20Tatex.kz%20"
                         class="header__number">
                         <img width="24px" style="margin-right: 0.5rem;" src="{% static 'img/whatsapp.svg' %}" alt="">
-                        <span>{% trans 'Начать чат в Whatsapp' %}</span></a>
+                    </a>
                 </div>
             </div>
-            
+
             <div class="header__container">
                 <a href="{% if LANGUAGE_CODE != 'ru' %}/{{ LANGUAGE_CODE }}{% endif %}" class="header__logo-ibg">
                     <img src="{% static 'img/logo.svg' %}" alt="tatex">
                 </a>
-                
+
                 <div class="header__search header-search search">
                     <form action="/tracking" method="get" class="header-search__form search-form">
                         <input type="text" name="trackcode" class="header-search__input search-input"
@@ -60,7 +63,7 @@
                         <button class="header-search__btn search-btn"></button>
                     </form>
                 </div>
-                
+
                 <div data-da=".menu__block-2, 767.98" class="header__right-side header__menu-box">
                     <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
                         <input name="next" type="hidden" value="{{ redirect_to }}">
@@ -69,16 +72,18 @@
                             {% get_available_languages as LANGUAGES %}
                             {% get_language_info_list for LANGUAGES as languages %}
                             {% for language in languages %}
-                                <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
-                                    {{ language.name_local }} ({{ language.code }})
-                                </option>
+                            <option value="{{ language.code }}" {% if language.code==LANGUAGE_CODE %} selected{% endif
+                                %}>
+                                {{ language.name_local }} ({{ language.code }})
+                            </option>
                             {% endfor %}
                         </select>
                         <noscript><input type="submit" value="Submit"></noscript>
                     </form>
-                    <a href="{% if LANGUAGE_CODE != 'ru' %}/{{ LANGUAGE_CODE }}{% endif %}/order" class="header__questions-btn button header-button">{% trans 'Оформить заявку' %}</a>
+                    <a href="{% if LANGUAGE_CODE != 'ru' %}/{{ LANGUAGE_CODE }}{% endif %}/order"
+                        class="header__questions-btn button header-button">{% trans 'Оформить заявку' %}</a>
                 </div>
-                
+
                 <div class="header__menu menu">
                     <div class="menu__open-header">
                         <button type="button" class="menu__icon icon-menu"></button>
@@ -91,7 +96,7 @@
                     </div>
                 </div>
             </div>
-            
+
         </header>
         {% endblock %}
         {% block content %}{% endblock %}
@@ -116,19 +121,24 @@
                             class="footer-social-media__img _icon-telegram"></a>
                     </div>
                     <div class="footer__links footer-link">
-                        <a href="{% if LANGUAGE_CODE != 'ru' %}/{{ LANGUAGE_CODE }}{% endif %}/oferta/" class="footer-link__box">
+                        <a href="{% if LANGUAGE_CODE != 'ru' %}/{{ LANGUAGE_CODE }}{% endif %}/oferta/"
+                            class="footer-link__box">
                             <div class="footer-link__text">{% trans 'Оферта' %}</div>
                         </a>
-                        <a href="{% if LANGUAGE_CODE != 'ru' %}/{{ LANGUAGE_CODE }}{% endif %}#about-us" data-goto=".about-us" class="footer-link__box">
+                        <a href="{% if LANGUAGE_CODE != 'ru' %}/{{ LANGUAGE_CODE }}{% endif %}#about-us"
+                            data-goto=".about-us" class="footer-link__box">
                             <div class="footer-link__text">{% trans 'О нас' %}</div>
                         </a>
-                        <a href="{% if LANGUAGE_CODE != 'ru' %}/{{ LANGUAGE_CODE }}{% endif %}#reviews" data-goto=".reviews" class="footer-link__box">
+                        <a href="{% if LANGUAGE_CODE != 'ru' %}/{{ LANGUAGE_CODE }}{% endif %}#reviews"
+                            data-goto=".reviews" class="footer-link__box">
                             <div class="footer-link__text">{% trans 'Отзывы' %}</div>
                         </a>
-                        <a href="{% if LANGUAGE_CODE != 'ru' %}/{{ LANGUAGE_CODE }}{% endif %}#questions" data-goto=".questions" class="footer-link__box">
+                        <a href="{% if LANGUAGE_CODE != 'ru' %}/{{ LANGUAGE_CODE }}{% endif %}#questions"
+                            data-goto=".questions" class="footer-link__box">
                             <div class="footer-link__text">FAQ</div>
                         </a>
-                        <a href="{% if LANGUAGE_CODE != 'ru' %}/{{ LANGUAGE_CODE }}{% endif %}/privacy/" class="footer-link__box">
+                        <a href="{% if LANGUAGE_CODE != 'ru' %}/{{ LANGUAGE_CODE }}{% endif %}/privacy/"
+                            class="footer-link__box">
                             <div class="footer-link__text">{% trans 'Политика приватности' %}</div>
                         </a>
                     </div>
@@ -136,7 +146,7 @@
             </div>
         </footer>
         {% endblock %}
-        
+
         {% block popup %}
         <div id="popup_success" aria-hidden="true" class="popup popup_success">
             <div class="popup__wrapper">
@@ -151,10 +161,13 @@
                         </div>
                         <div class="popup__title">{% trans 'Заявка оформлена' %}</div>
                         <div class="popup__text">
-                            {% trans 'В течении 10 минут вам на почту придёт письмо с трек-номером для отслеживания заказа и накладная по Вашему отправлению, ее нужно распечатать и передать курьеру вместе с Вашей посылкой' %}
+                            {% trans 'В течении 10 минут вам на почту придёт письмо с трек-номером для отслеживания
+                            заказа и накладная по Вашему отправлению, ее нужно распечатать и передать курьеру вместе с
+                            Вашей посылкой' %}
                         </div>
                     </div>
-                    <a href="{% if LANGUAGE_CODE != 'ru' %}/{{ LANGUAGE_CODE }}{% endif %}" class="popup__button button">{% trans 'Вернуться на главную' %}</a>
+                    <a href="{% if LANGUAGE_CODE != 'ru' %}/{{ LANGUAGE_CODE }}{% endif %}"
+                        class="popup__button button">{% trans 'Вернуться на главную' %}</a>
                 </div>
             </div>
         </div>
@@ -174,7 +187,8 @@
                             {% trans 'Возможно данного трек-кода пока нет в нашей базе, попробуйте позже' %}
                         </div>
                     </div>
-                    <a href="{% if LANGUAGE_CODE != 'ru' %}/{{ LANGUAGE_CODE }}{% endif %}" class="popup__button button">{% trans 'Вернуться на главную' %}</a>
+                    <a href="{% if LANGUAGE_CODE != 'ru' %}/{{ LANGUAGE_CODE }}{% endif %}"
+                        class="popup__button button">{% trans 'Вернуться на главную' %}</a>
                 </div>
             </div>
         </div>
@@ -195,7 +209,7 @@
     <script src="{% url 'javascript-catalog' %}"></script>
     <script src="{% static 'js/app.js' %}"></script>
     <script src="{% static 'js/additional.js' %}"></script>
-    
+
 </body>
 
 </html>
