--- a/Tatexkz/templates/base.html
+++ b/Tatexkz/templates/base.html
@@ -74,7 +74,8 @@
                             {% for language in languages %}
                             <option 
                             value="{{ language.code }}" 
-                            {% if language.code == LANGUAGE_CODE %} selected{% endif %}>
+                            {% if language.code == LANGUAGE_CODE %} selected{% endif %}
+                            style="padding:0 10px;">
                                 {{ language.code }}
                             </option>
                             {% endfor %}
