--- a/Tatexkz/templates/base.html
+++ b/Tatexkz/templates/base.html
@@ -47,7 +47,7 @@
                         class="header__number">
                         <img width="24px" style="margin-right: 0.5rem;" src="{% static 'img/whatsapp.svg' %}" alt="">
                     </a>
-                    <form data-da=".header__mobile-lang, 767.98" style="padding:0 10px; font-size: 16px;" action="{% url 'set_language' %}" method="post">{% csrf_token %}
+                    <form style="font-weight: 500;" data-da=".header__mobile-lang, 767.98" style="padding:0 10px; font-size: 16px;" action="{% url 'set_language' %}" method="post">{% csrf_token %}
                         <input name="next" type="hidden" value="{{ redirect_to }}">
                         <select data-submit class="select" name="language">
                             {% get_current_language as LANGUAGE_CODE %}
