--- a/Tatexkz/templates/tracking/tracking.html
+++ b/Tatexkz/templates/tracking/tracking.html
@@ -6,7 +6,7 @@
 <main class="page">
 	{% if not error %}
 	<section class="page__name page-name">
-		<h1 class="page-name__title"><a href="/">{% trans 'Отслеживание' %}</a></h1>
+		<h1 class="page-name__title"><a href="{% if LANGUAGE_CODE != 'ru' %}/{{ LANGUAGE_CODE }}{% endif %}">{% trans 'Отслеживание' %}</a></h1>
 	</section>
 	<section class="page__tracking tracking">
 		<div class="tracking__search search">
