--- a/Tatexkz/templates/tracking/tracking.html
+++ b/Tatexkz/templates/tracking/tracking.html
@@ -57,8 +57,11 @@
 						<span></span>
 						<div class="status-tracking__body">
 							<div class="status-tracking__body-title">
-								{{event.description}}</div>
-							<div class="status-tracking__body-value">{{event.date}}</div>
+								{{event.description}}
+							</div>
+							<div class="status-tracking__body-value">
+								{{event.date}}
+							</div>
 						</div>
 					</div>
 					{% endfor %}
