--- a/Tatexkz/templates/order/order.html
+++ b/Tatexkz/templates/order/order.html
@@ -312,6 +312,9 @@
                                 </div>
                             </div>
                             <div class="form-order__input-box _margin-10">
+                                <div class="form-order__input-title">{% trans 'Курьер совершит забор посылки в указанную дату в течении дня (с 10:00 до 18:00).' %}</div>
+                            </div>
+                            <div class="form-order__input-box _margin-10">
                                 <div class="form-order__input-title">
                                     {% trans 'Удобно ли вам распечатать накладную?' %}
                                 </div>
