--- a/Tatexkz/templates/order/order.html
+++ b/Tatexkz/templates/order/order.html
@@ -66,6 +66,10 @@
                                     {% trans 'Яды, ядовитые животные, вещества, растения и семена.' %}
                                 </li>
                             </ul>
+                            <div class="form-order__input-box _margin-10">
+                                <a href="/{% if LANGUAGE_CODE != 'ru' %}{{ LANGUAGE_CODE }}{% endif %}#questions"
+                                    class="form-order__input-title">{% trans 'Смотреть все' %}</ф>
+                            </div>
                         </div>
                         <div class="form-order__section">
                             <h2 class="form-order__title title-h2">{% trans 'Вес и габариты' %}</h2>
@@ -312,7 +316,8 @@
                                 </div>
                             </div>
                             <div class="form-order__input-box _margin-10">
-                                <div class="form-order__input-title">{% trans 'Курьер совершит забор посылки в указанную дату в течении дня (с 10:00 до 18:00).' %}</div>
+                                <div class="form-order__input-title">{% trans 'Курьер совершит забор посылки в указанную
+                                    дату в течении дня (с 10:00 до 18:00).' %}</div>
                             </div>
                             <div class="form-order__input-box _margin-10">
                                 <div class="form-order__input-title">
@@ -461,7 +466,7 @@
         if (!result["error"]) {
             const isPrint = form.querySelector('input[name="print"]:checked')
             if (form.querySelector('.errorMsg'))
-                    form.querySelector('.errorMsg').remove()
+                form.querySelector('.errorMsg').remove()
             if (isPrint.value.toString() === "True") {
                 document.querySelector('.form-order__danger').insertAdjacentHTML('beforeBegin', `
                     <div class="form-order__danger">
