--- a/Tatexkz/templates/order/order.html
+++ b/Tatexkz/templates/order/order.html
@@ -68,7 +68,7 @@
                             </ul>
                             <div class="form-order__input-box _margin-10">
                                 <a href="/{% if LANGUAGE_CODE != 'ru' %}{{ LANGUAGE_CODE }}{% endif %}#questions"
-                                    class="form-order__input-title">{% trans 'Смотреть все' %}</ф>
+                                    class="form-order__input-title">{% trans 'Смотреть все' %}</a>
                             </div>
                         </div>
                         <div class="form-order__section">
